--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 <!--End of card-->
             </div>
             <!--End of row-->
-            <div class="table-resonsive-sm mb-5">
-                <table class="table table-bordered">
+            <div class="table-responsive">
+                <table class="table table-bordered table-hover">
                     <thead>
                     <tr>
                         <th scope="col-work-name">Название работы</th>
